--- a/index.html
+++ b/index.html
@@ -34,39 +34,40 @@
       <div class="jumbotron text-center bg-transparent bgheader"></div>
       <div class="row text-center p-2 mt-5 mx-0">
         <div class="column col-4">
-          <button class="btn bg-warning text p-2">WINS</button>
+          <span class="label bg-warning text p-2 rounded">WINS</span>
         </div>
         <div class="column col-4">
-          <button class="btn bg-warning text p-2">GUESSES LEFT</button>
+          <span class="label bg-warning text p-2 rounded">GUESSES LEFT</span>
         </div>
         <div class="column col-4">
-          <button class="btn bg-warning text p-2">LOSSES</button>
+          <span class="label bg-warning text p-2 rounded">LOSSES</span>
         </div>
       </div>
-      <div class="row text-center p-2 mx-0">
+      <div class="row text-center p-2 mt-1 mx-0">
         <div class="column col-4">
-          <button class="btn bg-warning text p-2" id="winCount">0</button>
+          <span class="label bg-warning text p-2 rounded" id="winCount">&nbsp</span>
         </div>
         <div class="column col-4">
-          <button class="btn bg-warning text p-2" id="guessCount">0</button>
+          <span class="label bg-warning text p-2 rounded" id="guessCount">&nbsp</span>
         </div>
         <div class="column col-4">
-          <button class="btn bg-warning text p-2" id="lossCount">0</button>
+          <span class="label bg-warning text p-2 rounded" id="lossCount">&nbsp</span>
         </div>
       </div>
       <div class="row text-center mt-5 mx-0 pt-4">
-        <div class="column col-12" id="randWord">
-          <!-- <button class="btn bg-warning text p-2">GUESSES LEFT</button> -->
-        </div>
+        <div class="column col-12" id="randWord"></div>
       </div>
-      <div class="row text-center p-2 mt-5 mx-0">
+      <div class="row text-center mt-5 mx-0 pt-4">
+        <div class="column col-12" id="guessChars"></div>
+      </div>
+      <div class="row text-center mt-5 mx-0 pt-4">
         <div class="column col-12">
           <h2 class="text">Guess The Word</h2>
         </div>
       </div>
-      <div class="row text-center p-2 mt-3 mx-0">
+      <div class="row text-center mt-3 mx-0 pt-4">
         <div class="column col-12">
-          <h5 class="text">Press any key to conitnue</h5>
+          <h5 class="text" id="footer">Press any key to conitnue</h5>
         </div>
       </div>
     </div>
