--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
       crossorigin="anonymous"
     />
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
@@ -25,6 +20,11 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
     <script src="./assets/javascript/word.js" type="text/javascript"></script>
     <title>Word Guess</title>
@@ -32,6 +32,11 @@
   <body>
     <div class="container-fluid bgimg">
       <div class="jumbotron text-center bg-transparent bgheader"></div>
+      <div class="row text-center mt-5 mx-0 pt-3">
+        <div class="column col-12">
+          <h2 class="text">Guess The Word</h2>
+        </div>
+      </div>
       <div class="row text-center p-2 mt-5 mx-0">
         <div class="column col-4">
           <span class="label bg-warning text p-2 rounded">WINS</span>
@@ -59,11 +64,6 @@
       </div>
       <div class="row text-center mt-5 mx-0 pt-4">
         <div class="column col-12" id="guessChars"></div>
-      </div>
-      <div class="row text-center mt-5 mx-0 pt-4">
-        <div class="column col-12">
-          <h2 class="text">Guess The Word</h2>
-        </div>
       </div>
       <div class="row text-center mt-3 mx-0 pt-4">
         <div class="column col-12">
