Added background and changed styling

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
   </head>
   <body>
     <div class="container-fluid bgimg">
-      <div class="jumbotron text-center bg-transparent bgheader"></div>
-      <div class="row text-center mt-5 mx-0 pt-3">
+      <div class="jumbotron text-center bg-transparent text-warning">
+        <h1>Guess The Word</h1>
+      </div>
+      <!-- <div class="row text-center mt-5 mx-0 pt-3">
         <div class="column col-12">
           <h2 class="text">Guess The Word</h2>
         </div>
-      </div>
-      <div class="row text-center p-2 mt-5 mx-0">
+      </div> -->
+      <div class="row text-center p-2 mt-3 mx-0">
         <div class="column col-4">
           <span class="label bg-warning text p-2 rounded">WINS</span>
         </div>
@@ -59,15 +61,15 @@
           <span class="label bg-warning text p-2 rounded" id="lossCount">&nbsp</span>
         </div>
       </div>
-      <div class="row text-center mt-5 mx-0 pt-4">
+      <div class="row text-center mt-5 mb-2 mx-0 pt-4">
         <div class="column col-12" id="randWord"></div>
       </div>
       <div class="row text-center mt-5 mx-0 pt-4">
         <div class="column col-12" id="guessChars"></div>
       </div>
-      <div class="row text-center mt-3 mx-0 pt-4">
+      <div class="row text-center mt-5 mx-0 pt-4">
         <div class="column col-12">
-          <h5 class="text" id="footer">Press any key to conitnue</h5>
+          <h5 class="text-warning" id="footer">Press any key to conitnue</h5>
         </div>
       </div>
     </div>
