Added function for hint, display err msg using modal

--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content modal-bg">
             <div class="modal-header border-bottom-0 text-center">
-              <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
-              <h4 class="modal-title text w-100"></h4>
+              <h4 class="modal-title w-100"></h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
-            <div class="modal-body text-center">
-              <p class="text"></p>
-            </div>
+            <div class="modal-body text-center"></div>
           </div>
         </div>
       </div>
