Changed styling for counters

--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
       </div> -->
       <div class="row text-center p-2 mt-3 mx-0">
         <div class="column col-4">
-          <span class="label bg-warning text p-2 rounded">WINS</span>
+          <span class="label bg-custom p-2 rounded">WINS</span>
         </div>
         <div class="column col-4">
-          <span class="label bg-warning text p-2 rounded">GUESSES LEFT</span>
+          <span class="label bg-custom p-2 rounded">GUESSES LEFT</span>
         </div>
         <div class="column col-4">
-          <span class="label bg-warning text p-2 rounded">LOSSES</span>
+          <span class="label bg-custom p-2 rounded">LOSSES</span>
         </div>
       </div>
       <div class="row text-center p-2 mt-1 mx-0">
         <div class="column col-4">
-          <span class="label bg-warning text p-2 rounded" id="winCount">&nbsp</span>
+          <span class="label bg-custom p-2 rounded" id="winCount">&nbsp</span>
         </div>
         <div class="column col-4">
-          <span class="label bg-warning text p-2 rounded" id="guessCount">&nbsp</span>
+          <span class="label bg-custom p-2 rounded" id="guessCount">&nbsp</span>
         </div>
         <div class="column col-4">
-          <span class="label bg-warning text p-2 rounded" id="lossCount">&nbsp</span>
+          <span class="label bg-custom p-2 rounded" id="lossCount">&nbsp</span>
         </div>
       </div>
       <div class="row text-center mt-5 mb-2 mx-0 pt-4">
